# Tiled-BG-Remover

./: AGENTS.md  README.ja.md  README.md  README.zh.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: image_processing.rs  lib.rs  main.rs
src/lib/: CropModal.svelte  ImageUploader.svelte  Settings.svelte  TileGrid.svelte  api.ts  i18n.ts  mock_api.ts  modelRegistry.ts
src/routes/: +page.svelte
